--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "asteroseismology"
-version = "0.1.0"
+version = "0.1.1"
 description = "Useful functions for asteroseismology"
 readme = "README.md"
 authors = [
@@ -15,7 +15,8 @@ requires-python = ">=3.8"
 dependencies = [
     "matplotlib",
     "numpy",
-    "pandas"
+    "pandas",
+    "intervaltree"
 ]
 
 [project.urls]
