--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "asteroseismology"
-version = "0.1.3"
+version = "0.1.4"
 description = "Useful functions for asteroseismology"
 readme = "README.md"
 authors = [
@@ -16,7 +16,8 @@ dependencies = [
     "matplotlib",
     "numpy",
     "pandas",
-    "intervaltree"
+    "intervaltree",
+    "astropy"
 ]
 
 [project.urls]
